add timezone / remove Last from Time / fixes
